# PokemonSMS-Rust

./: .gitignore  Cargo.toml  README.md
client-core/: Cargo.toml
client-core/src/: player.rs
core/: Cargo.toml
core/src/: lib.rs  moves.rs  registry.rs  resource.rs
derive_proc_macros/pokemonsms-derive/: Cargo.toml
derive_proc_macros/pokemonsms-derive/src/: lib.rs
io/: Cargo.toml  README.md
io/src/: data.rs  lib.rs  nbt.rs  shade.rs  uuid.rs  version.rs
net/: Cargo.toml
net/src/: hashsum.rs  lib.rs  packet.rs
src/: helper.rs  io.rs  lib.rs  random.rs  registry.rs  time.rs  uuid.rs  version.rs
src/cipher/: mod.rs
src/core/: ability.rs  event.rs  events.rs  mod.rs  moves.rs  species.rs  text.rs  types.rs
src/crypto/: asymmetric.rs  cipher.rs  hash.rs  mod.rs  signature.rs  symmetric.rs
src/io/: cipher.rs  dataio.rs  dev.rs  mod.rs
src/pkmcom/: irc.rs  lan.rs  mod.rs  net.rs  tcp.rs
src/shade/: constants.rs  mod.rs  nbt.rs  shade.rs
text/: Cargo.toml
text/src/: lib.rs
