[package]
name = "pokemonsms-core"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["clientcore","servercore"]
server = ["servercore","pkmcom"]
clientcore = []
servercore = []
lan = ["pkmcom","pkmcom_multicast"]
dss = ["lan","pkmcom","pkmcom_multicast"]
pkmcom = ["pkmcom_tcp"]
pkmcom_bluetooth = []
pkmcom_tcp = []
pkmcom_multicast = []

[dependencies]
rlua = "0.17.0"
regex = "1"
lazy_static = "1.4.0"
binary-io = {path = "../io"}
text = {path = "../text"}
serde = {version="1.0.123",features=["derive"]}
fused-lock = "0.1.0"
