[package]
name = "io"
version = "0.1.0"
authors = ["Connor <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.111",optional=true}
rand = {version="0.8",optional=true}
uuid = {version="0.8.2",optional=true}
fake-enum = "0.1.2"

[features]
nbt = []
shade = ["nbt"]
random_uuid = ["rand"]
uuid_v1 = ["uuid","uuid/v1","rand"]
default = ["nbt"]