[package]
name = "pokemonsms-derive"
version = "0.1.0"
authors = ["Connor Horman <chorman64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn =  { version = "0.14.4", features = ["derive"]}
quote =  "0.6.3"